# AICAPI_YW3760

./: CHANGELOG.md  CONTRIBUTING.md  README.md  example of the package usage.ipynb  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/aicapi_yw3760/: aicapi_yw3760.py
tests/: test_aicapi_yw3760.py
