[tool.poetry]
name = "aicapi_yw3760"
version = "0.1.0"
description = "This is a python package of an API CLIENT to retrieve the data of collections in the Atr Institute of Chicago."
authors = ["yw3760"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
